# OID_Universe

./: .env.example  .gitignore  CLAUDE.md  OID_Universe.postman_collection.json  README.md  docker-compose.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
api/: .dockerignore  Dockerfile  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
api/config/: ancestors.yml
api/scripts/: seed_ancestors.py
api/src/: config.py  main.py
api/src/db/: __init__.py  env.py
api/src/db/migrations/versions/: 001_initial_schema.py  002_write_guard_trigger.py  003_indexes_and_grants.py  004_api_tokens.py
api/src/middleware/: auth.py  rate_limit.py
api/src/models/: __init__.py  api_token.py  audit_log.py  oid_node.py
api/src/routers/: __init__.py  audit.py  auth.py  oid.py  search.py
api/src/schemas/: oid_node.py
api/src/services/: audit_service.py
api/tests/: conftest.py
api/tests/integration/: test_federation.py  test_oid_crud.py  test_visibility.py  test_write_guard.py
specs/: constitution.md  plan.md  roadmap.md  technical-stack.md
specs/001-oid-subtree-manager/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/design/: OID Registry.html  oid-app.jsx  oid-data.js  oid-detail.jsx  oid-modals.jsx  oid-tree.jsx  oid-ui.jsx
web/: .eslintrc.json  Dockerfile  auth.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts
(+22 files in other folders)
